dr01-python-microservices6/k8s-test8/nodeport.yaml
# https://github.com/nginx/kubernetes-ingress/blob/main/deployments/service/nodeport.yaml
# suite rech brave : https://search.brave.com/search?q=NodePort+service+template+(service-nodeport.yaml)+from+the+NGINX+ingress+GitHub+repository&source=desktop
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
